--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,6 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-
              <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
@@ -38,32 +37,28 @@
     </build>
 
     <dependencies>
-        <!-- SureFire -->
-        <dependency>
-            <groupId>org.apache.maven.surefire</groupId>
-            <artifactId>surefire-junit47</artifactId>
-            <version>2.18</version>
-        </dependency>
         <!-- JUnit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.11</version>
+            <version>4.13</version>
             <scope>test</scope>
         </dependency>
         <!-- Cucumber -->
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-java</artifactId>
-            <version>1.1.6</version>
-            <scope>test</scope>
+            <version>5.7.0</version>
         </dependency>
+
+        <!-- Cucumber junit -->
         <dependency>
-            <groupId>info.cukes</groupId>
+            <groupId>io.cucumber</groupId>
             <artifactId>cucumber-junit</artifactId>
-            <version>1.1.6</version>
+            <version>5.7.0</version>
             <scope>test</scope>
         </dependency>
+        <!-- Cucumber html-->
         <dependency>
             <groupId>info.cukes</groupId>
             <artifactId>cucumber-html</artifactId>
@@ -77,6 +72,8 @@
             <artifactId>selenium-java</artifactId>
             <version>2.45.0</version>
         </dependency>
+
+
     </dependencies>
 
 </project>
