--- a/pom.xml
+++ b/pom.xml
@@ -63,11 +63,16 @@
             <version>1.1.6</version>
             <scope>test</scope>
         </dependency>
+
         <dependency>
-            <groupId>info.cukes</groupId>
-            <artifactId>cucumber-html</artifactId>
-            <version>0.2.3</version>
-            <scope>test</scope>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>4.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.aventstack</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>4.1.7</version>
         </dependency>
 
         <!-- Selenium -->
