--- a/pom.xml
+++ b/pom.xml
@@ -13,26 +13,48 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>2.5.1</version>
+                <version>3.8.1</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
+                    <source>10</source>
+                    <target>10</target>
                 </configuration>
             </plugin>
-             <plugin>
+            <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>2.18</version>
                 <configuration>
 
-                  <systemPropertyVariables>
-                    <!-- Your Project Site Url -->
-                    <siteUrl>https://parabank.parasoft.com/</siteUrl>
-                    <!-- You can define more System.getProperty() here -->
-                  </systemPropertyVariables>
+                    <testFailureIgnore>true</testFailureIgnore>
+
+
+                    <systemPropertyVariables>
+                        <!-- Your Project Site Url -->
+                        <siteUrl>https://parabank.parasoft.com/</siteUrl>
+                        <!-- You can define more System.getProperty() here -->
+                    </systemPropertyVariables>
 
                 </configuration>
-              </plugin>
+            </plugin>
+            <plugin>
+                <groupId>net.masterthought</groupId>
+                <artifactId>cucumber-reporting</artifactId>
+                <version>4.7.0</version>
+                <executions>
+                    <execution>
+                        <id>execution</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>generate</goal>
+                        </goals>
+                        <configuration>
+                            <projectName>ExecuteAutomation</projectName>
+                            <outputDirectory>${project.build.directory}/cucumber-report-html</outputDirectory>
+                            <cucumberOutput>${project.build.directory}/cucumber.json</cucumberOutput>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -57,6 +79,12 @@
             <artifactId>cucumber-html</artifactId>
             <version>0.2.7</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-testng -->
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-testng</artifactId>
+            <version>5.7.0</version>
+        </dependency>
 
         <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
         <dependency>
@@ -77,12 +105,6 @@
             <artifactId>cucumber-jvm-deps</artifactId>
             <version>1.0.6</version>
             <scope>provided</scope>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/net.masterthought/cucumber-reporting -->
-        <dependency>
-            <groupId>net.masterthought</groupId>
-            <artifactId>cucumber-reporting</artifactId>
-            <version>4.7.0</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-core -->
         <dependency>
@@ -119,7 +141,7 @@
         <dependency>
             <groupId>com.aventstack</groupId>
             <artifactId>extentreports</artifactId>
-            <version>3.1.2</version>
+            <version>4.0.9</version>
         </dependency>
 
     </dependencies>
